--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beepbox Tournament 7</title>
+    <title>BeepBox Tournament v7.0</title>
+
+    <meta content="BeepComp (BeepBox 7th Tournament Portal)" property="og:title" />
+	  <meta content="BeepComp is an online portal for submitting and voting during the 7th annual BeepBox Tournament." property="og:description" />
+	  <meta property="og:image" content="/beepcomp_logo.png" />
+	  <meta property="og:image:type" content="image/png" />
+	  <meta name="theme-color" content="#7744FF" />
+    <meta name="msapplication-TileColor" content="#7744FF" />
   </head>
   <body>
     <div id="app"></div>
